Auth, dice completed, stories and user almost complete

--- a/APIGateway/yamls/dice-api.yaml
+++ b/APIGateway/yamls/dice-api.yaml
@@ -22,7 +22,7 @@ paths:
           description: OK
 
   /stories/new/roll:
-    get:
+    post:
       operationId: getRollPage
       summary: blabla
       description: blabla
