--- a/APIGateway/yamls/auth-api.yaml
+++ b/APIGateway/yamls/auth-api.yaml
@@ -58,18 +58,31 @@ paths:
       responses:
         '200':
           description: sei sloggato (forse)
-          
+
   /search:
     get:
-      operationId: search
-      summary: blabla
-      description: blabla
+      description: Return the search page
+      operationId: getSearchPage
       responses:
         '200':
-          description: blabla
+          description: OK
+    post:
+      operationId: search
+      summary: Search functionality
+      description: Return the list of all matching users and/or stories
       parameters:
         - in: query
           name: query
-          required: true
+          required: True
+          description: The string to search
           type: string
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: A JSON array of JSON objects containing users list
+        '204':
+          description: An empty JSON array
+        '400':
+          description: Error with query parameter
           
