--- a/APIGateway/yamls/auth-api.yaml
+++ b/APIGateway/yamls/auth-api.yaml
@@ -16,20 +16,18 @@ paths:
       operationId: home
       responses:
         '200':
-          description: getHomePage
+          description: OK
           
   /register:
     get:
       operationId: getRegisterPage
-      summary: blabla
-      description: blabla
+      description: Renders the page where it's possible to register a new user
       responses:
         '200':
           description: OK
     post:
       operationId: register
-      summary: blabla
-      description: blabla
+      description: Operation to register a new user
       responses:
         '200':
           description: OK
@@ -37,36 +35,32 @@ paths:
   /login:
     get:
       operationId: getLoginPage
-      summary: blabla
-      description: blabla
+      description: Renders the page where it's possible to login an already registered user
       responses:
         '200':
           description: OK
     post:
       operationId: login
-      summary: Actually login
-      description: blabla
+      description: Operation to login a registered user
       responses:
         '200':
-          description: sei loggato (forse)
+          description: OK
             
   /logout:
     post:
       operationId: logout
-      summary: blabla
-      description: blabla
+      description: Operation to logout a logged in user
       responses:
         '200':
-          description: sei sloggato (forse)
+          description: OK
           
   /search:
     get:
       operationId: search
-      summary: blabla
       description: blabla
       responses:
         '200':
-          description: blabla
+          description: OK
       parameters:
         - in: query
           name: query
